# fedciv-lab-cli

./: .gitignore  README.md  build.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: lint-fmt-test.yml  main-commit-pr.yml
fedciv_lab_cli/: __init__.py  services.py  util.py
lab_cli/: __init__.py  services.py
tests/: test_services.py
