[tool.poetry]
name = "fedciv_lab_cli"
version = "1.0"
description = ""
authors = ["Sam Byers", "Yashar Asgari", "Paul Merlitti"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
click = "^8.1.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
tox = "^3.24.5"
black = "^22.3.0"
flake8 = "^4.0.1"
requests-mock = "^1.9.3"

[tool.poetry.scripts]
civlab = "fedciv_lab_cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
